// 放置ボーナス受け取りレスポンス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/idleBonus";

import "user_idle_bonus_structure.proto";
import "master_idle_bonus_structure.proto";
import "master_idle_bonus_event_structure.proto";
import "master_idle_bonus_item_structure.proto";
import "master_idle_bonus_schedule_structure.proto";

message IdleBonusReceiveResponse {
  optional UserIdleBonus user_idle_bonus = 1;
  optional MasterIdleBonus master_idle_bonus = 2;
  optional MasterIdleBonusEvent master_idle_bonus_event = 3;
  repeated MasterIdleBonusItem master_idle_bonus_items = 4;
  repeated MasterIdleBonusSchedule master_idle_bonus_schedules = 5;
}
