// 放置ボーナス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/idleBonus";

message MasterIdleBonus {
  int64 id = 1;
  int64 master_idle_bonus_event_id = 2;
  string name = 3;
}
