// ユーザー放置ボーナス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/idleBonus";

import "google/protobuf/timestamp.proto";

message UserIdleBonus {
  string user_id = 1;
  int64 master_idle_bonus_id = 2;
  google.protobuf.Timestamp received_at = 3;
}
